<!--
  ~ Copyright 2015 MbientLab Inc. All rights reserved.
  ~
  ~ IMPORTANT: Your use of this Software is limited to those specific rights
  ~ granted under the terms of a software license agreement between the user who
  ~ downloaded the software, his/her employer (which must be your employer) and
  ~ MbientLab Inc, (the "License").  You may not use this Software unless you
  ~ agree to abide by the terms of the License which can be found at
  ~ www.mbientlab.com/terms . The License limits your use, and you acknowledge,
  ~ that the  Software may not be modified, copied or distributed and can be used
  ~ solely and exclusively in conjunction with a MbientLab Inc, product.  Other
  ~ than for the foregoing purpose, you may not use, reproduce, copy, prepare
  ~ derivative works of, modify, distribute, perform, display or sell this
  ~ Software and/or its documentation for any purpose.
  ~
  ~ YOU FURTHER ACKNOWLEDGE AND AGREE THAT THE SOFTWARE AND DOCUMENTATION ARE
  ~ PROVIDED "AS IS" WITHOUT WARRANTY OF ANY KIND, EITHER EXPRESS OR IMPLIED,
  ~ INCLUDING WITHOUT LIMITATION, ANY WARRANTY OF MERCHANTABILITY, TITLE,
  ~ NON-INFRINGEMENT AND FITNESS FOR A PARTICULAR PURPOSE. IN NO EVENT SHALL
  ~ MBIENTLAB OR ITS LICENSORS BE LIABLE OR OBLIGATED UNDER CONTRACT, NEGLIGENCE,
  ~ STRICT LIABILITY, CONTRIBUTION, BREACH OF WARRANTY, OR OTHER LEGAL EQUITABLE
  ~ THEORY ANY DIRECT OR INDIRECT DAMAGES OR EXPENSES INCLUDING BUT NOT LIMITED
  ~ TO ANY INCIDENTAL, SPECIAL, INDIRECT, PUNITIVE OR CONSEQUENTIAL DAMAGES, LOST
  ~ PROFITS OR LOST DATA, COST OF PROCUREMENT OF SUBSTITUTE GOODS, TECHNOLOGY,
  ~ SERVICES, OR ANY CLAIMS BY THIRD PARTIES (INCLUDING BUT NOT LIMITED TO ANY
  ~ DEFENSE THEREOF), OR OTHER SIMILAR COSTS.
  ~
  ~ Should you have any questions regarding your right to use this Software,
  ~ contact MbientLab Inc, at www.mbientlab.com.
  -->

<resources>
    <string name="app_name">AbDiscFilter</string>
    <string name="error_data_connection">must implement DataConnection interface</string>

    <string name="text_filter_setup_complete">Filter setup complete</string>
    <string name="text_filter_setup_required">Filters must be setup to use this panel</string>
    <string name="text_select_device">No MetaWear device selected</string>

    <string name="title_edit_setting">Edit Setting</string>
    <string name="title_debug_menu">Debug Menu</string>

    <string name="label_ok">OK</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_filter_config_program">Program</string>
    <string name="label_filter_config_entry_setting">Setting</string>
    <string name="label_filter_config_entry_value">Value</string>
    <string name="label_filter_config_commit">Commit</string>
    <string name="label_debug_sedentary">Sedentary</string>
    <string name="label_debug_crunch_offset">Crunch Value</string>
    <string name="label_debug_stream_adc_value">Sensor ADC Value</string>
    <string name="label_debug_stream_adc">Crunch ADC</string>
    <string name="label_debug_adc_offset">Crunch ADC Offset</string>
    <string name="label_debug_crunch_sessions">Crunch Sessions</string>
    <string name="label_debug_step_count">Step Count</string>
    <string name="label_debug_start">Start</string>
    <string name="label_debug_stop">Stop</string>
    <string name="label_debug_reconnect">Reconnect</string>
    <string name="label_reset">Reset</string>
    <string name="label_invalid_pwd">Invalid password</string>
    <string name="label_enter_pwd">Enter password to access the debug menu</string>

    <string name="description_filter_entry_revert">Reverts configuration setting to default value</string>
    <string name="description_filter_entry_info">Displays information about the setting</string>
    <string name="description_filter_entry_edit">Opens a box for editing the value</string>

    <string name="label_filter_config_setting_01">Sensor Data Pin</string>
    <string name="label_filter_config_setting_02">Sensor Ground Pin</string>
    <string name="label_filter_config_setting_03">Sedentary Reset Threshold</string>
    <string name="label_filter_config_setting_04">Sedentary Min Activity Threshold</string>
    <string name="label_filter_config_setting_05">Crunch Session Duration</string>
    <string name="label_filter_config_setting_06">Crunch Threshold Update Delta</string>
    <string name="label_filter_config_setting_07">L1 Haptic Lower Bound</string>
    <string name="label_filter_config_setting_08">L1 Haptic Upper Bound</string>
    <string name="label_filter_config_setting_09">L2 Haptic Lower Bound</string>
    <string name="label_filter_config_setting_10">L2 Haptic Upper Bound</string>
    <string name="label_filter_config_setting_11">L3 Haptic Lower Bound</string>
    <string name="label_filter_config_setting_12">L3 Haptic Upper Bound</string>
    <string name="label_filter_config_setting_13">L1 Haptic Strength</string>
    <string name="label_filter_config_setting_14">L2 Haptic Strength</string>
    <string name="label_filter_config_setting_15">L3 Haptic Strength</string>
    <string name="label_filter_config_setting_16">Sedentary Time</string>
    <string name="label_filter_config_setting_17">Tap Strength</string>
    <string name="label_filter_config_setting_18">ADC Sample Size</string>
    <string name="label_filter_config_setting_19">Crunch Threshold Check Duration</string>

    <string name="label_filter_config_description_01">GPIO pin that reads the ADC data</string>
    <string name="label_filter_config_description_02">GPIO pin used to ground the circuit</string>
    <string name="label_filter_config_description_03">Minimum activity signifying an active user</string>
    <string name="label_filter_config_description_04">Minimum activity level that indicates the device is worn</string>
    <string name="label_filter_config_description_05">How long a crunch session will last, in seconds</string>
    <string name="label_filter_config_description_06">Minimum change in baseline sensor value to update the crunch threshold</string>
    <string name="label_filter_config_description_07">Lower ADC value of haptic range for Level 1 feedback</string>
    <string name="label_filter_config_description_08">Upper ADC value of haptic range for Level 1 feedback</string>
    <string name="label_filter_config_description_09">Lower ADC value of haptic range for Level 2 feedback</string>
    <string name="label_filter_config_description_10">Upper ADC value of haptic range for Level 2 feedback</string>
    <string name="label_filter_config_description_11">Lower ADC value of haptic range for Level 3 feedback</string>
    <string name="label_filter_config_description_12">Upper ADC value of haptic range for Level 3 feedback</string>
    <string name="label_filter_config_description_13">Level 1 feedback strength</string>
    <string name="label_filter_config_description_14">Level 2 feedback strength</string>
    <string name="label_filter_config_description_15">Level 3 feedback strength</string>
    <string name="label_filter_config_description_16">Units of sedentary step period</string>
    <string name="label_filter_config_description_17">Threshold for a tap to register, max 8G</string>
    <string name="label_filter_config_description_18">Sample size of the ADC average</string>
    <string name="label_filter_config_description_19">How long crunch ADC values must remain above or below the threshold to trigger a threshold update</string>

</resources>
